[project]
name = "files-to-prompt"
version = "0.1"
description = "Concatenate a directory full of files into a single prompt for use with LLMs"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[project.urls]
Homepage = "https://github.com/simonw/files-to-prompt"
Changelog = "https://github.com/simonw/files-to-prompt/releases"
Issues = "https://github.com/simonw/files-to-prompt/issues"
CI = "https://github.com/simonw/files-to-prompt/actions"

[project.entry-points.console_scripts]
files-to-prompt = "files_to_prompt.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
